force-app/main/default/objects/SafariSyncSettings__c/SafariSyncSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>set sync status settings for safari databases</description>
    <label>Safari Sync Settings</label>
</CustomObject>