force-app/main/default/objects/SafariSyncSettings__c/fields/MPLS_Bill_Groups_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Bill_Groups_to_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPLS Bill Groups to Sync</label>
    <type>Checkbox</type>
</CustomField>