force-app/main/default/objects/SafariSyncSettings__c/fields/MPLS_Premises_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Premises_to_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPLS Premises to Sync</label>
    <type>Checkbox</type>
</CustomField>