force-app/main/default/objects/SafariSyncSettings__c/fields/To_HOU__c.field-meta.xml
<CustomField>
    <fullName>To_HOU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>salesforce to safari_houston one way sync</description>
    <inlineHelpText>salesforce to safari_houston one way sync</inlineHelpText>
    <label>To HOU</label>
    <type>Checkbox</type>
</CustomField>