force-app/main/default/objects/SafariSyncSettings__c/fields/To_LIVE__c.field-meta.xml
<CustomField>
    <fullName>To_LIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>salesforce to safari_live one way sync</description>
    <inlineHelpText>salesforce to safari_live one way sync</inlineHelpText>
    <label>To LIVE</label>
    <type>Checkbox</type>
</CustomField>