force-app/main/default/objects/SafariSyncSettings__c/fields/To_LIVE_Increm__c.field-meta.xml
<CustomField>
    <fullName>To_LIVE_Increm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To LIVE Increm</label>
    <type>Checkbox</type>
</CustomField>