force-app/main/default/objects/SafariSyncSettings__c/fields/To_MPLS__c.field-meta.xml
<CustomField>
    <fullName>To_MPLS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>salesforce to safari_mpls one way sync</description>
    <inlineHelpText>salesforce to safari_mpls one way sync</inlineHelpText>
    <label>To MPLS</label>
    <type>Checkbox</type>
</CustomField>