force-app/main/default/objects/SafariSyncSettings__c/fields/To_STL__c.field-meta.xml
<CustomField>
    <fullName>To_STL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>salesforce to safari_stl one way sync</description>
    <inlineHelpText>salesforce to safari_stl one way sync</inlineHelpText>
    <label>To STL</label>
    <type>Checkbox</type>
</CustomField>